[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophia-agno-teams"
version = "1.0.0"
description = "AGNO Teams for Sophia AI - Multi-agent collaboration system"
authors = [
    {name = "Sophia AI Intelligence Team", email = "ai@sophia-intel.ai"}
]
dependencies = [
    "agno>=0.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.1"
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"